[package]
name = "airstation"
version = "0.1.0"
authors = ["Jianing Yang <jianingy.yang@gmail.com>"]

[dependencies]
clap = "2.13.0"
error-chain = "0.5.0"
lazy_static = "0.2.1"
nickel = "0.9.0"
r2d2 = "0.6.4"
r2d2_mysql = "*"
serde = "0.8"
serde_json = "0.8"
serial = "0.3.4"
sysfs_gpio = "0.4.4"
env_logger = "0.3"
log = "0.3"
prusst = "0.1.0"

[dependencies.chrono]
version = "0.2"
features = ["serde", "rustc-serialize"]
